Sensor data is being sent to the phone now!

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="rotation">Rotation Vector</string>
     <string name="gyro">Gyroscope</string>
     <string name="heart">Heart Rate</string>
+    <string name="step">Step Counter</string>
+    <string name="significant">Significant Motion</string>
 </resources>
