--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="app_name">Pitchlium</string>
-    <string name="hello_world">Hello World!</string>
     <string name="accelerometer">Accelerometer</string>
     <string name="gravity">Gravity</string>
-    <string name="rotation">Rotation Vector</string>
-    <string name="gyro">Gyroscope</string>
     <string name="heart">Heart Rate</string>
     <string name="step">Step Counter</string>
     <string name="presenting">Ready to Present</string>
+    <string name="zeros">00</string>
+    <string name="dotdot">:</string>
 </resources>
