--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="detectedMovement">Detected Movement</string>
     <string name="zeros">00</string>
     <string name="dotdot">:</string>
+    <string name="script">Presentation Script</string>
 </resources>
